--- a/ProductCrud/appsettings.json
+++ b/ProductCrud/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConn": "Host=all-server.czlj8f0zdpxw.us-east-1.rds.amazonaws.com;Database=interview_db;Port=5432;User ID=postgres;Password=passpass;"
+    "DefaultConn": ""
   },
   "JWT": {
     "ValidAudience": "https://localhost:7209",
